# gundert-portal-scraper

./: .gitignore  CACHE_SAFETY_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  conversation_backup_oct16_2025.md  demo.py  project_reconstruction_guide.json  pyproject.toml
docs/: API_REFERENCE.md  CACHE_MANAGEMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  OUTPUT_MANAGEMENT.md  README.md  TEI_TRANSFORMER.md  USER_GUIDE.md  USFM_TRANSFORMER.md
docs/archived/: next_session_notes.md
docs/archived/essential_backup/: project_reconstruction_guide.json
docs/archived/essential_backup/psalms_transformed/: GaXXXIV5a.xml
essential_backup/: pyproject.toml
examples/: README.md  basic_usage.py  batch_processing.py
examples/output_samples/: sample.usfm
src/gundert_bible_scraper/: __init__.py  scraper.py
src/gundert_portal_scraper/: __init__.py
src/gundert_portal_scraper/cli/: __init__.py  __main__.py  commands.py
src/gundert_portal_scraper/core/: __init__.py  book_identifier.py  cache.py  connection.py  connector.py  download_phase.py  exceptions.py  processing_phase.py  two_phase_scraper.py
src/gundert_portal_scraper/extraction/: __init__.py  content.py  content_scraper.py  metadata.py  two_phase_scraper.py
src/gundert_portal_scraper/preview/: __init__.py  viewer.py
src/gundert_portal_scraper/storage/: __init__.py  formats.py  manager.py  output_manager.py  schemas.py
src/gundert_portal_scraper/transformations/: __init__.py  framework.py  tei_transformer.py  usfm_transformer.py
src/gundert_portal_scraper/transformations/plugins/: __init__.py  bibleml_transformer.py  docx_transformer.py  parabible_transformer.py  tei_transformer.py  usfm_transformer.py
src/gundert_portal_scraper/validation/: __init__.py
src/gundert_portal_scraper/validation/validators/: __init__.py  docx_validator.py  json_validator.py  usfm_validator.py  xml_validator.py
tests/: conftest.py
tests/integration/: test_gundert_integration.py  test_scraper_integration.py
tests/unit/: test_gundert_specific.py  test_scraper.py  test_selenium_scraping.py
